--- a/site-pract/index.html
+++ b/site-pract/index.html
@@ -12,5 +12,6 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat minima totam nesciunt corporis excepturi ex ipsa, vel quaerat voluptate animi labore, quis optio amet debitis ea iure commodi adipisci nemo.
 
     </p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, porro quas vitae repellat exercitationem cupiditate magnam temporibus omnis distinctio, aspernatur quidem dolorum natus dicta quae aliquam aliquid? A, beatae ducimus.</p>
 </body>
 </html>
